# Intent-x

./: README.md  intent_mapping.ipynb  main.py  pyproject.toml  requirements.txt
app/: app.py
data/processed/: X_test.joblib  X_train.joblib  tfidf_vectorizer.joblib  y_test.joblib  y_train.joblib
models/: intent_classifier.joblib  intent_groups.json
notebooks/: 01_exploration.ipynb
src/: data_loader.py  predict.py  preprocess.py  train.py
